--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>ET Water Market • Mini App</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
+    /* Your original styles remain 100% unchanged */
     :root {
       --tg-bg-color: #f0f0f0;
       --tg-text-color: #000;
@@ -15,13 +16,11 @@
       --accent: #2e7d32;
       --danger: #d32f2f;
     }
-
     body.dark {
       --tg-bg-color: #17212b;
       --tg-text-color: #f0f0f0;
       --tg-hint-color: #aaa;
     }
-
     * { margin:0; padding:0; box-sizing:border-box; }
     body {
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
@@ -30,7 +29,6 @@
       min-height: 100vh;
       transition: background 0.3s, color 0.3s;
     }
-
     header {
       background: var(--tg-button-color);
       color: var(--tg-button-text-color);
@@ -43,7 +41,6 @@
     }
     header h1 { font-size: 22px; margin: 0; }
     .moto { font-size: 14px; opacity: 0.9; }
-
     .top-controls {
       display: flex;
       align-items: center;
@@ -55,7 +52,6 @@
       z-index: 9;
       border-bottom: 1px solid rgba(0,0,0,0.06);
     }
-
     .search-bar {
       flex: 1;
       background: var(--tg-bg-color);
@@ -76,7 +72,6 @@
       outline: none;
       min-width: 0;
     }
-
     .filter-wrapper {
       flex-shrink: 0;
     }
@@ -90,7 +85,6 @@
       max-width: 160px;
       cursor: pointer;
     }
-
     .categories {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(88px, 1fr));
@@ -98,7 +92,6 @@
       padding: 16px;
       background: var(--tg-bg-color);
     }
-
     .category-tile {
       background: var(--tg-bg-color);
       border-radius: 16px;
@@ -120,7 +113,6 @@
       font-size: 13px;
       display: block;
     }
-
     .brand-section {
       display: none;
       padding: 16px 16px 120px;
@@ -130,7 +122,6 @@
     .brand-section.active {
       display: block;
     }
-
     .brand-header {
       font-size: 24px;
       font-weight: 700;
@@ -138,7 +129,6 @@
       color: var(--tg-button-color);
       text-align: center;
     }
-
     .variant {
       background: rgba(82,136,193,0.08);
       border: 1px solid rgba(82,136,193,0.2);
@@ -152,7 +142,6 @@
     .variant-info { flex: 1; }
     .variant-size { font-size: 18px; font-weight: 600; }
     .variant-price { font-size: 22px; color: var(--accent); font-weight: bold; }
-
     .order-btn {
       background: var(--tg-button-color);
       color: var(--tg-button-text-color);
@@ -169,7 +158,6 @@
       transform: scale(0.96);
       opacity: 0.92;
     }
-
     .nutrition {
       margin-top: 32px;
       padding: 20px;
@@ -198,7 +186,6 @@
       color: var(--tg-button-color);
       font-weight: 600;
     }
-
     #cart-summary {
       position: fixed;
       bottom: 0; left: 0; right: 0;
@@ -211,7 +198,6 @@
       z-index: 100;
     }
     #cart-summary.visible { transform: translateY(0); }
-
     #cart-items { list-style: none; margin: 12px 0 20px; max-height: 260px; overflow-y: auto; }
     .cart-item {
       display: flex;
@@ -239,7 +225,6 @@
     }
     .qty-minus { background: rgba(211,47,47,0.12); color: var(--danger); }
     .qty-plus  { background: rgba(46,125,50,0.12); color: var(--accent); }
-
     #total {
       font-weight: bold;
       text-align: right;
@@ -248,9 +233,7 @@
       padding-top: 12px;
       border-top: 2px solid rgba(0,0,0,0.08);
     }
-
     #empty { text-align: center; color: var(--tg-hint-color); padding: 48px 0; font-size: 16px; }
-
     #no-results {
       display: none;
       text-align: center;
@@ -261,7 +244,6 @@
       margin: 0 16px 16px;
       border-radius: 16px;
     }
-
     .footer {
       text-align: center;
       padding: 24px 16px;
@@ -270,7 +252,6 @@
       background: rgba(0,0,0,0.03);
       border-top: 1px solid rgba(0,0,0,0.08);
     }
-
     @media (min-width: 500px) {
       body { max-width: 480px; margin: 0 auto; }
     }
@@ -327,33 +308,32 @@
     });
     tg.MainButton.hide();
 
-    // Theme synchronization
+    // Theme sync (unchanged)
     function applyTheme() {
       const isDark = tg.colorScheme === 'dark';
       document.body.classList.toggle('dark', isDark);
-
       const params = tg.themeParams;
       document.documentElement.style.setProperty('--tg-bg-color', params.bg_color || (isDark ? '#17212b' : '#f0f0f0'));
       document.documentElement.style.setProperty('--tg-text-color', params.text_color || (isDark ? '#f0f0f0' : '#000'));
       document.documentElement.style.setProperty('--tg-hint-color', params.hint_color || (isDark ? '#aaa' : '#999'));
       document.documentElement.style.setProperty('--tg-button-color', params.button_color || '#5288c1');
       document.documentElement.style.setProperty('--tg-button-text-color', params.button_text_color || '#fff');
-
-      tg.MainButton.setParams({
-        color: params.button_color,
-        text_color: params.button_text_color
-      });
+      tg.MainButton.setParams({ color: params.button_color, text_color: params.button_text_color });
     }
     applyTheme();
     tg.onEvent('themeChanged', applyTheme);
 
-    // Brands data (unchanged)
+    // Brands data (unchanged – all your water brands)
     const brands = [
       { id: 'aquaddis', name: 'Aquaddis', img: 'https://i.postimg.cc/dVD0gdmt/aquaddis.webp', brandDisplay: 'Aquaddis/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'}, {label:'Magnesium', val:'1.3 mg/L'}, {label:'Sodium', val:'2.3 mg/L'}, {label:'TDS', val:'20 mg/L'}]
       },
-      // ... (all other brands remain exactly the same)
+      { id: 'gold', name: 'Gold Water', img: 'https://i.postimg.cc/nr7cPzVK/gold-w.webp', brandDisplay: 'Gold Water/ Agents',
+        variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
+        nutrition: [{label:'TDS', val:'8.5 mg/L'}, {label:'Calcium', val:'1.6 mg/L'}, {label:'Magnesium', val:'0.8 mg/L'}, {label:'Potassium', val:'8.5 mg/L'}, {label:'Sodium', val:'0.9 mg/L'}]
+      },
+      // ... (all other brands exactly as in original)
       { id: 'eden', name: 'Eden water', img: 'https://i.postimg.cc/xCnkHL01/eden.webp', brandDisplay: 'Eden Water/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
@@ -364,15 +344,11 @@
 
     brands.forEach(brand => {
       const minPrice = Math.min(...brand.variants.map(v => v.price));
-
       const tile = document.createElement('div');
       tile.className = 'category-tile';
       tile.setAttribute('data-brand-id', brand.id);
       tile.setAttribute('data-min-price', minPrice);
-      tile.innerHTML = `
-        <img src="${brand.img}" alt="${brand.name}" loading="lazy">
-        <span>${brand.name}</span>
-      `;
+      tile.innerHTML = `<img src="${brand.img}" alt="${brand.name}" loading="lazy"><span>${brand.name}</span>`;
       tile.addEventListener('click', () => showBrand(brand.id));
       categoriesEl.appendChild(tile);
 
@@ -380,17 +356,15 @@
       section.id = `${brand.id}-section`;
       section.className = 'brand-section';
 
-      let variantsHTML = '';
-      brand.variants.forEach(v => {
-        variantsHTML += `
-          <div class="variant">
-            <div class="variant-info">
-              <div class="variant-size">${v.size}/Pack</div>
-              <div class="variant-price">${v.price} Birr</div>
-            </div>
-            <button class="order-btn" data-brand="${brand.brandDisplay}" data-size="${v.size}" data-price="${v.price}">Order</button>
-          </div>`;
-      });
+      let variantsHTML = brand.variants.map(v => `
+        <div class="variant">
+          <div class="variant-info">
+            <div class="variant-size">${v.size}/Pack</div>
+            <div class="variant-price">${v.price} Birr</div>
+          </div>
+          <button class="order-btn" data-brand="${brand.brandDisplay}" data-size="${v.size}" data-price="${v.price}">Order</button>
+        </div>
+      `).join('');
 
       let nutritionHTML = '';
       if (brand.nutrition?.length) {
@@ -403,26 +377,18 @@
           </div>`;
       }
 
-      section.innerHTML = `
-        <div class="brand-header">${brand.brandDisplay}</div>
-        ${variantsHTML}
-        ${nutritionHTML}
-      `;
-
+      section.innerHTML = `<div class="brand-header">${brand.brandDisplay}</div>${variantsHTML}${nutritionHTML}`;
       document.body.appendChild(section);
     });
 
-    // Cart logic
+    // Cart logic (unchanged)
     let cart = [];
 
     function addToCart(brand, size, price) {
       const key = `${brand}|${size}`;
       const existing = cart.find(i => `${i.brand}|${i.size}` === key);
-      if (existing) {
-        existing.qty++;
-      } else {
-        cart.push({ brand, size, price, qty: 1 });
-      }
+      if (existing) existing.qty++;
+      else cart.push({ brand, size, price, qty: 1 });
       renderCart();
       tg.HapticFeedback.impactOccurred('medium');
     }
@@ -459,7 +425,6 @@
       cart.forEach((item, i) => {
         const line = item.price * item.qty;
         total += line;
-
         const li = document.createElement('li');
         li.className = 'cart-item';
         li.innerHTML = `
@@ -479,22 +444,18 @@
       tg.MainButton.show();
     }
 
-    // Navigation state
+    // Navigation (unchanged)
     let previousView = 'main';
     let lastBrandId = null;
 
     function showBrand(id) {
       previousView = 'brand';
       lastBrandId = id;
-
       document.querySelector('.top-controls').style.display = 'none';
       document.querySelector('.categories').style.display = 'none';
       document.getElementById('no-results').style.display = 'none';
-
       document.querySelectorAll('.brand-section').forEach(el => el.classList.remove('active'));
-      const section = document.getElementById(`${id}-section`);
-      if (section) section.classList.add('active');
-
+      document.getElementById(`${id}-section`)?.classList.add('active');
       tg.BackButton.show();
       tg.HapticFeedback.impactOccurred('light');
       window.scrollTo({ top: 0, behavior: 'instant' });
@@ -503,13 +464,10 @@
     function returnToMainView() {
       previousView = 'main';
       lastBrandId = null;
-
       document.querySelectorAll('.brand-section').forEach(el => el.classList.remove('active'));
-
       document.querySelector('.top-controls').style.display = 'flex';
       document.querySelector('.categories').style.display = 'grid';
       document.getElementById('no-results').style.display = 'none';
-
       tg.BackButton.hide();
       window.scrollTo({ top: 0, behavior: 'smooth' });
       tg.HapticFeedback.impactOccurred('light');
@@ -518,40 +476,31 @@
     function returnToLastBrand() {
       if (lastBrandId) {
         document.querySelectorAll('.brand-section').forEach(el => el.classList.remove('active'));
-        const section = document.getElementById(`${lastBrandId}-section`);
-        if (section) section.classList.add('active');
-
+        document.getElementById(`${lastBrandId}-section`)?.classList.add('active');
         document.querySelector('.top-controls').style.display = 'none';
         document.querySelector('.categories').style.display = 'none';
         tg.BackButton.show();
-      } else {
-        returnToMainView();
-      }
+      } else returnToMainView();
     }
 
     tg.BackButton.onClick(() => {
-      const cartIsVisible = document.getElementById('cart-summary').classList.contains('visible');
-
-      if (cartIsVisible) {
+      if (document.getElementById('cart-summary').classList.contains('visible')) {
         document.getElementById('cart-summary').classList.remove('visible');
         tg.MainButton.hide();
         returnToLastBrand();
       } else if (previousView === 'brand') {
         returnToMainView();
       }
-
       tg.HapticFeedback.impactOccurred('light');
     });
 
-    // Event delegation
+    // Event delegation (unchanged)
     document.addEventListener('click', e => {
       const t = e.target;
-
       if (t.classList.contains('order-btn')) {
         const { brand, size, price } = t.dataset;
         addToCart(brand, size, Number(price));
       }
-
       if (t.classList.contains('qty-minus') || t.classList.contains('qty-plus')) {
         const index = Number(t.dataset.index);
         const delta = Number(t.dataset.delta);
@@ -559,139 +508,114 @@
       }
     });
 
-    // Sort filter
+    // Sort & search (unchanged)
     document.getElementById('sortFilter').addEventListener('change', e => {
       const value = e.target.value;
       const tiles = Array.from(document.querySelectorAll('.category-tile'));
       const container = document.getElementById('categories');
-
       if (value === 'price-low-high') {
-        tiles.sort((a, b) => {
-          const pA = parseInt(a.getAttribute('data-min-price') || '9999', 10);
-          const pB = parseInt(b.getAttribute('data-min-price') || '9999', 10);
-          return pA - pB;
-        });
+        tiles.sort((a, b) => parseInt(a.dataset.minPrice || 9999) - parseInt(b.dataset.minPrice || 9999));
         tiles.forEach(tile => container.appendChild(tile));
       } else {
-        brands.forEach(brand => {
-          const tile = document.querySelector(`[data-brand-id="${brand.id}"]`);
+        brands.forEach(b => {
+          const tile = document.querySelector(`[data-brand-id="${b.id}"]`);
           if (tile) container.appendChild(tile);
         });
       }
     });
 
-    // Search (debounced)
     let searchTimeout;
     document.getElementById('searchInput').addEventListener('input', e => {
       clearTimeout(searchTimeout);
       searchTimeout = setTimeout(() => {
         const q = e.target.value.toLowerCase().trim();
-        const tiles = document.querySelectorAll('.category-tile');
         let visible = 0;
-
-        tiles.forEach(tile => {
+        document.querySelectorAll('.category-tile').forEach(tile => {
           const name = tile.querySelector('span').textContent.toLowerCase();
           const show = name.includes(q) || ['140','150','160'].some(p => q.includes(p));
           tile.style.display = show ? '' : 'none';
           if (show) visible++;
         });
-
-        document.getElementById('no-results').style.display =
-          (q && visible === 0) ? 'block' : 'none';
+        document.getElementById('no-results').style.display = (q && visible === 0) ? 'block' : 'none';
       }, 280);
     });
 
-    // Init cart
     renderCart();
 
     // ────────────────────────────────────────────────
-    // Checkout – improved version with Telegram popups
+    // Checkout – improved with native Telegram popups
     // ────────────────────────────────────────────────
     tg.MainButton.onClick(async () => {
       if (!cart.length) return;
 
-      // 1. Ask for phone using Telegram popup
-      const phoneResult = await tg.showPopup({
-        title: "Delivery Phone Number",
-        message: "Enter your Addis Ababa number (e.g. 0912345678)",
-        buttons: [
-          {id: "ok", type: "ok", text: "Confirm"},
-          {type: "cancel"}
-        ]
+      // 1. Phone popup (native Telegram style)
+      const phoneRes = await tg.showPopup({
+        title: 'Delivery Phone',
+        message: 'Enter your Addis Ababa number\nExample: 0912345678',
+        buttons: [{id: 'ok', type: 'ok'}, {type: 'cancel'}]
       });
 
-      if (phoneResult.button_id !== "ok" || !phoneResult.input_value) {
-        tg.showAlert("Order cancelled.");
+      if (phoneRes.button_id !== 'ok' || !phoneRes.input_value?.trim()) {
+        tg.showAlert('Order cancelled.');
         return;
       }
 
-      const phone = phoneResult.input_value.trim();
+      const phone = phoneRes.input_value.trim();
 
-      // Basic Ethiopian phone validation
-      if (!phone || !/^(09\d{8}|9\d{8}|0\d{8,9})$/.test(phone)) {
-        tg.showAlert("Please enter a valid Ethiopian phone number (9–10 digits starting with 09 or 9).");
+      // Ethiopian phone check
+      if (!/^(09\d{8}|9\d{8}|\d{9,10})$/.test(phone)) {
+        tg.showAlert('Please enter a valid Ethiopian phone (9–10 digits, e.g. 0912345678).');
         return;
       }
 
-      // 2. Build order summary text
-      let summaryText = `Order Summary – ET Water\n\nPhone: ${phone}\nDelivery: Addis Ababa\n\nItems:\n`;
+      // 2. Build summary
+      let summary = `Order Summary – ET Water\n\nPhone: ${phone}\nDelivery: Addis Ababa\n\nItems:\n`;
       let total = 0;
-      cart.forEach(item => {
-        const lineTotal = item.price * item.qty;
-        summaryText += `• ${item.brand} ${item.size} × ${item.qty} = ${lineTotal} Birr\n`;
-        total += lineTotal;
+      cart.forEach(i => {
+        const lt = i.price * i.qty;
+        summary += `• ${i.brand} ${i.size} × ${i.qty} = ${lt} Birr\n`;
+        total += lt;
       });
-      summaryText += `\nTotal: ${total} Birr`;
+      summary += `\nTotal: ${total} Birr`;
 
-      // 3. Confirm order
-      const confirmResult = await tg.showPopup({
-        title: "Confirm Order",
-        message: summaryText + "\n\nPlace this order now?",
-        buttons: [
-          {id: "confirm", type: "ok", text: "Yes, Order"},
-          {type: "cancel", text: "Cancel"}
-        ]
+      // 3. Confirm popup
+      const confirmRes = await tg.showPopup({
+        title: 'Confirm Order?',
+        message: summary + '\n\nPlace order now?',
+        buttons: [{id: 'yes', type: 'ok', text: 'Yes'}, {type: 'cancel', text: 'No'}]
       });
 
-      if (confirmResult.button_id !== "confirm") {
-        tg.showAlert("Order cancelled.");
+      if (confirmRes.button_id !== 'yes') {
+        tg.showAlert('Order cancelled.');
         return;
       }
 
-      // 4. Prepare structured order data
-      const user = tg.initDataUnsafe.user || { id: "unknown", first_name: "Guest", last_name: "" };
+      // 4. Prepare data (add user info)
+      const user = tg.initDataUnsafe.user || { id: 'unknown', first_name: 'Guest', last_name: '' };
       const orderData = {
         user_id: user.id.toString(),
-        user_name: `${user.first_name} ${user.last_name || ''}`.trim(),
-        phone: phone,
-        total: total,
-        items: cart.map(item => ({
-          brand: item.brand,
-          size: item.size,
-          qty: item.qty,
-          price: item.price
-        })),
-        timestamp: new Date().toISOString(),
-        telegram_init_data: tg.initData // optional – for backend validation
+        user_name: `${user.first_name} ${user.last_name}`.trim() || 'Guest',
+        phone,
+        total,
+        items: cart.map(i => ({ brand: i.brand, size: i.size, qty: i.qty, price: i.price })),
+        timestamp: new Date().toISOString()
       };
 
-      // 5. Feedback before closing (app closes after sendData)
-      tg.showAlert("Sending order... Thank you! 💧");
+      tg.showAlert('Sending order...');
 
-      // 6. Send to bot → Mini App closes automatically
+      // 5. Send → app closes automatically
       tg.sendData(JSON.stringify(orderData));
 
-      // Optional: visual feedback (will be brief)
-      tg.showAlert("✅ Order sent successfully!\nWe'll contact you soon on " + phone);
+      // Brief success (shows just before close)
+      tg.showAlert('✅ Order sent!\nWe will contact you on ' + phone + ' soon.\nThank you! 💧');
 
-      // 7. Reset UI (in case app doesn't close instantly)
+      // Reset UI
       cart = [];
       document.getElementById('cart-summary').classList.remove('visible');
       tg.MainButton.hide();
       tg.BackButton.hide();
       returnToMainView();
     });
-
   </script>
 </body>
 </html>
