--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
     /* ────────────────────────────────────────────────
-       Your original styles – unchanged
+       Your original styles – completely unchanged
     ──────────────────────────────────────────────── */
     :root {
       --tg-bg-color: #f0f0f0;
@@ -330,7 +330,7 @@
     });
     tg.MainButton.hide();
 
-    // Theme synchronization
+    // Theme synchronization (unchanged)
     function applyTheme() {
       const isDark = tg.colorScheme === 'dark';
       document.body.classList.toggle('dark', isDark);
@@ -350,7 +350,7 @@
     applyTheme();
     tg.onEvent('themeChanged', applyTheme);
 
-    // Brands data (your full list – unchanged)
+    // Brands data – your full list (unchanged)
     const brands = [
       { id: 'aquaddis', name: 'Aquaddis', img: 'https://i.postimg.cc/dVD0gdmt/aquaddis.webp', brandDisplay: 'Aquaddis/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
@@ -470,7 +470,7 @@
       document.body.appendChild(section);
     });
 
-    // Cart logic
+    // Cart logic (unchanged)
     let cart = [];
 
     function addToCart(brand, size, price) {
@@ -537,22 +537,18 @@
       tg.MainButton.show();
     }
 
-    // Navigation state
+    // Navigation (unchanged)
     let previousView = 'main';
     let lastBrandId = null;
 
     function showBrand(id) {
       previousView = 'brand';
       lastBrandId = id;
-
       document.querySelector('.top-controls').style.display = 'none';
       document.querySelector('.categories').style.display = 'none';
       document.getElementById('no-results').style.display = 'none';
-
       document.querySelectorAll('.brand-section').forEach(el => el.classList.remove('active'));
-      const section = document.getElementById(`${id}-section`);
-      if (section) section.classList.add('active');
-
+      document.getElementById(`${id}-section`)?.classList.add('active');
       tg.BackButton.show();
       tg.HapticFeedback.impactOccurred('light');
       window.scrollTo({ top: 0, behavior: 'instant' });
@@ -561,13 +557,10 @@
     function returnToMainView() {
       previousView = 'main';
       lastBrandId = null;
-
       document.querySelectorAll('.brand-section').forEach(el => el.classList.remove('active'));
-
       document.querySelector('.top-controls').style.display = 'flex';
       document.querySelector('.categories').style.display = 'grid';
       document.getElementById('no-results').style.display = 'none';
-
       tg.BackButton.hide();
       window.scrollTo({ top: 0, behavior: 'smooth' });
       tg.HapticFeedback.impactOccurred('light');
@@ -576,41 +569,31 @@
     function returnToLastBrand() {
       if (lastBrandId) {
         document.querySelectorAll('.brand-section').forEach(el => el.classList.remove('active'));
-        const section = document.getElementById(`${lastBrandId}-section`);
-        if (section) section.classList.add('active');
-
+        document.getElementById(`${lastBrandId}-section`)?.classList.add('active');
         document.querySelector('.top-controls').style.display = 'none';
         document.querySelector('.categories').style.display = 'none';
         tg.BackButton.show();
-      } else {
-        returnToMainView();
-      }
+      } else returnToMainView();
     }
 
     tg.BackButton.onClick(() => {
-      const cartIsVisible = document.getElementById('cart-summary').classList.contains('visible');
-
-      if (cartIsVisible) {
+      if (document.getElementById('cart-summary').classList.contains('visible')) {
         document.getElementById('cart-summary').classList.remove('visible');
         tg.MainButton.hide();
-
         returnToLastBrand();
       } else if (previousView === 'brand') {
         returnToMainView();
       }
-
       tg.HapticFeedback.impactOccurred('light');
     });
 
-    // Event delegation
+    // Event delegation (unchanged)
     document.addEventListener('click', e => {
       const t = e.target;
-
       if (t.classList.contains('order-btn')) {
         const { brand, size, price } = t.dataset;
         addToCart(brand, size, Number(price));
       }
-
       if (t.classList.contains('qty-minus') || t.classList.contains('qty-plus')) {
         const index = Number(t.dataset.index);
         const delta = Number(t.dataset.delta);
@@ -618,143 +601,152 @@
       }
     });
 
-    // Sort filter
+    // Sort & search (unchanged)
     document.getElementById('sortFilter').addEventListener('change', e => {
       const value = e.target.value;
       const tiles = Array.from(document.querySelectorAll('.category-tile'));
       const container = document.getElementById('categories');
-
       if (value === 'price-low-high') {
-        tiles.sort((a, b) => {
-          const pA = parseInt(a.getAttribute('data-min-price') || '9999', 10);
-          const pB = parseInt(b.getAttribute('data-min-price') || '9999', 10);
-          return pA - pB;
-        });
+        tiles.sort((a, b) => parseInt(a.dataset.minPrice || 9999) - parseInt(b.dataset.minPrice || 9999));
         tiles.forEach(tile => container.appendChild(tile));
       } else {
-        brands.forEach(brand => {
-          const tile = document.querySelector(`[data-brand-id="${brand.id}"]`);
+        brands.forEach(b => {
+          const tile = document.querySelector(`[data-brand-id="${b.id}"]`);
           if (tile) container.appendChild(tile);
         });
       }
     });
 
-    // Search (debounced)
     let searchTimeout;
     document.getElementById('searchInput').addEventListener('input', e => {
       clearTimeout(searchTimeout);
       searchTimeout = setTimeout(() => {
         const q = e.target.value.toLowerCase().trim();
-        const tiles = document.querySelectorAll('.category-tile');
         let visible = 0;
-
-        tiles.forEach(tile => {
+        document.querySelectorAll('.category-tile').forEach(tile => {
           const name = tile.querySelector('span').textContent.toLowerCase();
           const show = name.includes(q) || ['140','150','160'].some(p => q.includes(p));
           tile.style.display = show ? '' : 'none';
           if (show) visible++;
         });
-
-        document.getElementById('no-results').style.display =
-          (q && visible === 0) ? 'block' : 'none';
+        document.getElementById('no-results').style.display = (q && visible === 0) ? 'block' : 'none';
       }, 280);
     });
 
-    // Init
     renderCart();
 
     // ────────────────────────────────────────────────
-    // Checkout – improved version with native popups + debug logs
+    // Checkout – send order via fetch to your backend
     // ────────────────────────────────────────────────
     tg.MainButton.onClick(async () => {
-      console.log('[MINI-APP] Checkout button clicked – cart length:', cart.length);
-      if (!cart.length) {
-        console.log('[MINI-APP] Cart is empty – aborting');
+      console.log('[FETCH-CHECKOUT] Button clicked – cart length:', cart.length);
+
+      if (cart.length === 0) {
+        tg.showAlert("Your cart is empty.");
+        console.log('[FETCH-CHECKOUT] Cart empty → abort');
         return;
       }
 
-      // 1. Ask phone with Telegram popup
-      const phoneResult = await tg.showPopup({
-        title: "Delivery Phone Number",
-        message: "Enter your Addis Ababa number (e.g. 0912345678)",
+      // 1. Phone input popup
+      const phoneRes = await tg.showPopup({
+        title: "Delivery Phone",
+        message: "Enter your Addis Ababa number\nExample: 0912345678",
         buttons: [
-          {id: "ok", type: "ok", text: "Confirm"},
-          {type: "cancel"}
+          { id: 'ok', type: 'ok', text: 'Confirm' },
+          { type: 'cancel' }
         ]
       });
 
-      console.log('[MINI-APP] Phone popup result:', phoneResult);
+      console.log('[FETCH-CHECKOUT] Phone popup result:', phoneRes);
 
-      if (phoneResult.button_id !== "ok" || !phoneResult.input_value?.trim()) {
+      if (phoneRes.button_id !== 'ok' || !phoneRes.input_value?.trim()) {
         tg.showAlert("Order cancelled.");
-        console.log('[MINI-APP] Phone cancelled – aborting');
+        console.log('[FETCH-CHECKOUT] Phone cancelled → abort');
         return;
       }
 
-      const phone = phoneResult.input_value.trim();
+      const phone = phoneRes.input_value.trim();
 
-      if (!/^(09\d{8}|9\d{8}|\d{9,10})$/.test(phone)) {
-        tg.showAlert("Please enter a valid Ethiopian phone (9–10 digits).");
-        console.log('[MINI-APP] Invalid phone format – aborting');
+      if (!/^(09\d{8}|9\d{8}|0\d{9})$/.test(phone)) {
+        tg.showAlert("Invalid phone number (must be 9–10 digits, start with 09 or 9).");
+        console.log('[FETCH-CHECKOUT] Invalid phone → abort');
         return;
       }
 
-      // 2. Build summary
-      let summaryText = `Order Summary – ET Water\n\nPhone: ${phone}\nDelivery: Addis Ababa\n\nItems:\n`;
+      // 2. Build summary & total
       let total = 0;
+      let summaryText = `Phone: ${phone}\nDelivery: Addis Ababa\n\nItems:\n`;
       cart.forEach(item => {
         const lineTotal = item.price * item.qty;
-        summaryText += `• ${item.brand} ${item.size} × ${item.qty} = ${lineTotal} Birr\n`;
         total += lineTotal;
+        summaryText += `• ${item.brand} ${item.size} × ${item.qty} = ${lineTotal} Birr\n`;
       });
       summaryText += `\nTotal: ${total} Birr`;
 
-      // 3. Confirm order with popup
-      const confirmResult = await tg.showPopup({
-        title: "Confirm Order",
-        message: summaryText + "\n\nPlace this order now?",
+      // 3. Confirm popup
+      const confirmRes = await tg.showPopup({
+        title: "Confirm Order?",
+        message: summaryText + "\n\nPlace order now?",
         buttons: [
-          {id: "yes", type: "ok", text: "Yes, Order"},
-          {type: "cancel", text: "Cancel"}
+          { id: 'yes', type: 'ok', text: 'Yes, Order' },
+          { type: 'cancel', text: 'Cancel' }
         ]
       });
 
-      console.log('[MINI-APP] Confirm result:', confirmResult);
+      console.log('[FETCH-CHECKOUT] Confirm result:', confirmRes);
 
-      if (confirmResult.button_id !== "yes") {
+      if (confirmRes.button_id !== 'yes') {
         tg.showAlert("Order cancelled.");
-        console.log('[MINI-APP] Order confirmation cancelled – aborting');
+        console.log('[FETCH-CHECKOUT] Confirmation cancelled → abort');
         return;
       }
 
-      // 4. Prepare data + add user info
-      const user = tg.initDataUnsafe.user || { id: "unknown", first_name: "Guest", last_name: "" };
-      const orderData = {
+      // 4. Prepare payload
+      const user = tg.initDataUnsafe.user || { id: 'unknown', first_name: 'Guest', last_name: '' };
+      const payload = {
         user_id: user.id.toString(),
-        user_name: `${user.first_name} ${user.last_name}`.trim() || "Guest",
-        phone: phone,
-        total: total,
+        user_name: `${user.first_name} ${user.last_name || ''}`.trim(),
+        phone,
+        total,
         items: cart.map(item => ({
           brand: item.brand,
           size: item.size,
           qty: item.qty,
           price: item.price
         })),
-        timestamp: new Date().toISOString()
+        timestamp: new Date().toISOString(),
+        init_data: tg.initData  // for backend security validation (optional but good)
       };
 
-      console.log('[MINI-APP] Order data prepared:', JSON.stringify(orderData, null, 2));
+      console.log('[FETCH-CHECKOUT] Payload ready:', JSON.stringify(payload, null, 2));
 
-      // 5. Send to bot → Mini App closes automatically
-      console.log('[MINI-APP] Calling tg.sendData() now...');
-      tg.sendData(JSON.stringify(orderData));
+      // 5. Send to YOUR backend (change this URL!)
+      const backendUrl = 'https://danorder-js.vercel.app/';   // ← CHANGE THIS
 
-      // 6. Show success before close
-      tg.showAlert("✅ Order sent! We'll contact you soon.\nThank you! 💧");
+      try {
+        console.log('[FETCH-CHECKOUT] Sending POST request to:', backendUrl);
+        const response = await fetch(backendUrl, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(payload)
+        });
 
-      console.log('[MINI-APP] sendData called – waiting for app to close');
+        console.log('[FETCH-CHECKOUT] Response status:', response.status);
 
-      // Reset UI
+        if (response.ok) {
+          tg.showAlert("✅ Order sent successfully!\nWe'll contact you soon.");
+          console.log('[FETCH-CHECKOUT] Success – closing Mini App');
+          tg.close();  // Close Mini App manually
+        } else {
+          tg.showAlert("Error: Server responded with " + response.status);
+          console.log('[FETCH-CHECKOUT] Server error:', await response.text());
+        }
+      } catch (err) {
+        console.error('[FETCH-CHECKOUT] Network/fetch error:', err);
+        tg.showAlert("Cannot connect to server. Check internet or try later.");
+      }
+
+      // Reset UI anyway
       cart = [];
       document.getElementById('cart-summary').classList.remove('visible');
       tg.MainButton.hide();
